--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ high-quality websites that meet performance optimization best practices and exce
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/Floki-The-Boat-Maker/Personal-Portfolio" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -211,7 +211,7 @@ high-quality websites that meet performance optimization best practices and exce
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/Floki-The-Boat-Maker/Weather" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -224,7 +224,7 @@ high-quality websites that meet performance optimization best practices and exce
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/Floki-The-Boat-Maker/Quiz"  target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -245,44 +245,7 @@ high-quality websites that meet performance optimization best practices and exce
                                 How to Create Your Own Website
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog1.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                How to Become an Expert in Web Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog2.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Become a Web Designer in 10 Days
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog3.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Debbuging made easy with Web Inspector
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                Creating a website involves choosing a domain name, selecting a hosting provider, and using tools like HTML, CSS, and JavaScript for development. Start with a basic structure using HTML, style it with CSS, and add interactivity using JavaScript. Alternatively, use platforms like WordPress for faster results. Keep it simple and user-friendly.
                             </p>
                         </div>
                     </div>
@@ -293,8 +256,7 @@ high-quality websites that meet performance optimization best practices and exce
                                 Get started with Web Design and UI Design
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                Start web design by learning HTML and CSS for structure and styling. Master responsive design to ensure mobile compatibility. Explore UI design principles like consistency, alignment, and color theory. Use tools like Figma or Adobe XD for mockups. Focus on user experience (UX) to create intuitive, visually appealing, and functional designs.
                             </p>
                         </div>
                     </div>
@@ -305,8 +267,7 @@ high-quality websites that meet performance optimization best practices and exce
                                 This is what you need to know about Web Design
                             </h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
+                                Web design combines creativity and technical skills to build visually appealing and functional websites. It involves mastering HTML, CSS, and responsive design principles for seamless layouts. Key elements include usability, typography, color schemes, and navigation. Tools like Figma and Adobe XD aid in prototyping. Prioritize user experience for successful designs.
                             </p>
                         </div>
                     </div>
@@ -374,13 +335,10 @@ high-quality websites that meet performance optimization best practices and exce
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/Floki-The-Boat-Maker" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://www.linkedin.com/in/ramkumar-seenivasan-912b37345/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                             </div>
@@ -399,12 +357,14 @@ high-quality websites that meet performance optimization best practices and exce
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="#" class="main-btn">
+                                <a href="Ramkumar_resume (1).pdf" class="main-btn" download="Ramkumar Seenivasan CV>
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>    
                             </div>
-                            
+                            <div class="container-email">
+                                <a href="mailto:ramkumarseenivasan0206@gmail.com" class="email-button">Email Me</a>
+                            </div>
                         </form>
                     </div>
                 </div>
