--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     
                 </p>
                 <div class="btn-con">
-                    <a href="Ramkumar_resume (1).pdf" class="main-btn" download="Ramkumar Seenivasan CV">
+                    <a href="Ramkumar-seenivasan.pdf" class="main-btn" download="Ramkumar Seenivasan CV">
                         <span class="btn-text">Download CV </span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -357,7 +357,7 @@ high-quality websites that meet performance optimization best practices and exce
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="Ramkumar_resume (1).pdf" class="main-btn" download="Ramkumar Seenivasan CV>
+                                <a href="Ramkumar-seenivasan.pdf" class="main-btn" download="Ramkumar Seenivasan CV>
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>    
