--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ multiple devices. Exceptional proficiency in HTML5, CSS3, JavaScript, React, Ang
 high-quality websites that meet performance optimization best practices and exceed client expectations
                     </p>
                     <div class="btn-con">
-                        <a href="Ramkumar_resume (1).pdf" class="main-btn" download="Ramkumar Seenivasan CV">
+                        <a href="Ramkumar-seenivasan.pdf" class="main-btn" download="Ramkumar Seenivasan CV">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
