--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="./img/WhatsApp Image 2025-01-09 at 12.12.19 PM.jpeg" alt="Ramkumar Seenivasan Image">
+                    <img src="./img/WhatsApp Image 2025-02-10 at 11.30.40.jpeg" alt="Ramkumar Seenivasan Image">
                 </div>
             </div>
             <div class="right-header">
