--- a/index.html
+++ b/index.html
@@ -344,29 +344,9 @@ high-quality websites that meet performance optimization best practices and exce
                             </div>
                         </div>
                     </div>
-                    <div class="right-contact">
-                        <form action="" class="contact-form">
-                            <div class="input-control i-c-2">
-                                <input type="text" required placeholder="YOUR NAME">
-                                <input type="email" required placeholder="YOUR EMAIL">
-                            </div>
-                            <div class="input-control">
-                                <input type="text" required placeholder="ENTER SUBJECT">
-                            </div>
-                            <div class="input-control">
-                                <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
-                            </div>
-                            <div class="submit-btn">
-                                <a href="Ramkumar-seenivasan.pdf" class="main-btn" download="Ramkumar Seenivasan CV>
-                                    <span class="btn-text">Download CV</span>
-                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
-                                </a>    
-                            </div>
-                            <div class="container-email">
-                                <a href="mailto:ramkumarseenivasan0206@gmail.com" class="email-button">Email Me</a>
-                            </div>
-                        </form>
-                    </div>
+                    <form action="https://forms.gle/CuXTR3tRYdByqutQ9" method="get" target="_blank">
+                        <button type="submit">Write to me</button>
+                    </form>
                 </div>
             </div>
         </section>
