--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="Ramkumar Seenivasan - Frontend Developer Portfolio">
     <meta name="keywords" content="Frontend Developer, Portfolio, Web Developer, JavaScript, React">
     <meta name="author" content="Ramkumar Seenivasan">
+    <meta name="google-site-verification" content="POKs6o3uG8QIZCnjygLlqDDMf-gMrB1WkIWzAU0fZSg" />
 
 </head>
 <body class="main-content">
